--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Pokémon</title>
     <link rel="stylesheet" href="css/main.css"> <!-- Arquivo CSS -->
+    <link rel="shortcut icon" href="img/masterball.png" type="image/png">
 </head>
 <body>
     <!-- Imagem do logotipo -->
@@ -15,6 +16,13 @@
         <input type="text" id="pokemon2" name="pokemon2" placeholder="Apenas o nome do Pokémon" required oninput="toggleButton();">
         <button type="submit" id="submitButton2" disabled>Buscar</button> <!-- Altere para type="submit" -->
     </form>
+
+    <div class="projects">
+        <p class="projects-text">Veja meus outros projetos:</p>
+        <div class="project-item">
+            <img src="img/Sonic Memory Game.png" alt="Projeto 1" class="project1" id="project1">
+        </div>
+    </div>
 
     <script src="js/pokemon.js"></script> <!-- Arquivo JavaScript -->
 </body>
