--- a/pokemon.html
+++ b/pokemon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados do Pokémon</title>
     <link rel="stylesheet" href="css/result.css"> <!-- Arquivo CSS -->
+    <link rel="shortcut icon" href="img/masterball.png" type="image/png">
 </head>
 <body>
     <!-- Imagem do logotipo -->
